--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^9.22.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
